@@ -34,7 +34,13 @@
 								<type>popup</type>
 								<title>Link</title>
 								<icon>link_popup.gif</icon>
-								<script>browse_links.php?mode=wizard&amp;act=file</script>
+                                <module type="array">
+                                    <name>wizard_element_browser</name>
+                                    <urlParameters type="array">
+                                        <mode>wizard</mode>
+                                        <act>file</act>
+                                    </urlParameters>
+                                </module>
 								<params type="array">
 									<blindLinkOptions>page,url,mail,spec</blindLinkOptions>
 								</params>
