@@ -10,10 +10,12 @@ $GLOBALS['TCA']['tt_content']['types']['list']['subtypes_addlist']['ratings' . '
 \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addPlugin(
     array(
         'LLL:EXT:ratings/Resources/Private/Language/locallang_tca.xlf:tt_content.list_type_pi1',
-        'ratings',
+        'ratings' . '_pi1',
         'EXT:ratings/ext_icon.gif'
     ),
     'list_type',
     'ratings'
 );
+
+
 
