@@ -1,5 +1,7 @@
 2018-11-23 Franz Holzinger <franz@ttproducts.de>
 
+    * fix exception 1437750231: replace flexform script with wizard_element_browser
+    * bugfix in tt_content.php
     * move pi1/flexform_ds.xml -> Configuration/FlexForms/flexform_ds.xml
     * core change: tslib_cObj -> \TYPO3\CMS\Frontend\ContentObject\ContentObjectRenderer
     * core change: t3lib_div -> \TYPO3\CMS\Core\Utility\GeneralUtility
